--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,15 @@ html,
 body {
   width: 100%;
   height: 100%;
+}
+
+html {
+  overflow: hidden;
+}
+
+body {
   overflow-y: auto;
+  overflow-x: hidden;
 }
 
 code {
